Fix spacing

--- a/src/styles/elements/landmarks.scss
+++ b/src/styles/elements/landmarks.scss
@@ -2,6 +2,12 @@
   Elements - Landmarks
 ========================================================================== */
 
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+
 html {
   background: $color-primary;
 }
